--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/Css/Widescreen.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
+    <link rel="stylesheet" media="screen and (min-width: 1100px)" href="css/widescreen.css">
 </head>
 <body>
     <!-- Navigation -->
@@ -17,6 +18,15 @@
             <li><a href="#charlie">Why</a></li>
             <li><a href="#delta">Contact</a></li>
         </ul>
+        <div class="dropdown">
+            <button onclick="myFunction()" class="dropbtn"></button>
+            <div id="myDropdown" class="dropdown-content">
+                <a href="#alpha">Home</a>
+                <a href="#beta">What</a>
+                <a href="#charlie">Why</a>
+                <a href="#delta">Contact</a>
+            </div>
+          </div>
     </div>
     <!-- Home -->
     <section id="alpha">
@@ -82,7 +92,7 @@
             </div>
         </div>
     </section>
-    <!-- contact -->
+    <!-- contact Mobile -->
     <section id="delta">
         <div class="contact">
             <br>
@@ -110,7 +120,39 @@
                   </form>
             </div>
         </div>
-        <div><iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7893.710431548852!2d73.12900155035851!3d33.71162950173644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38dfc03578501d3b%3A0xba40953cc50baef4!2sLake%20View%20Park!5e0!3m2!1sen!2s!4v1596537629375!5m2!1sen!2s" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+    </section>
+    <div class="mapframe"><iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7893.710431548852!2d73.12900155035851!3d33.71162950173644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38dfc03578501d3b%3A0xba40953cc50baef4!2sLake%20View%20Park!5e0!3m2!1sen!2s!4v1596537629375!5m2!1sen!2s" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    </div>
+    <!-- Contact Wide -->
+    <section id="deltaw">
+        <div class="contactw">
+            <br>
+            <h1>Contact Us</h1>
+            <p>Ask us anything because we listen, we really do</p>
+            <div>
+                <form>
+                    <div class="form-group">
+                      <!-- <label for="name">Name</label> -->
+                      <input type="text" name="name" id="name" placeholder="Enter Name">
+                    </div>
+                    <div class="form-group">
+                      <!-- <label for="email">Email</label> -->
+                      <input type="email" name="email" id="email" placeholder="Enter Email">
+                    </div>
+                    <div class="form-group">
+                      <!-- <label for="phone">Phone Number</label> -->
+                      <input type="text" name="phone" id="phone" placeholder="Enter Phone Number">
+                    </div>
+                    <div class="form-group">
+                      <!-- <label for="message">Message</label> -->
+                      <textarea name="message" id="message" placeholder="Enter Message"></textarea>
+                    </div>
+                    <button class="submit">Send</button>
+                  </form>
+            </div>
+        </div>
+        <div class="mapframew"><iframe class="mapw" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7893.710431548852!2d73.12900155035851!3d33.71162950173644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38dfc03578501d3b%3A0xba40953cc50baef4!2sLake%20View%20Park!5e0!3m2!1sen!2s!4v1596537629375!5m2!1sen!2s" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        </div>
     </section>
     <!-- Bottom Bar -->
     <section id="eta">
@@ -132,5 +174,28 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <!-- JS file -->
     <script src="/JS/main.js"></script>
+    <!-- Dropdown -->
+    <script>
+        /* When the user clicks on the button, 
+        toggle between hiding and showing the dropdown content */
+        function myFunction() {
+          document.getElementById("myDropdown").classList.toggle("show");
+        }
+        
+        // Close the dropdown if the user clicks outside of it
+        window.onclick = function(event) {
+          if (!event.target.matches('.dropbtn')) {
+            var dropdowns = document.getElementsByClassName("dropdown-content");
+            var i;
+            for (i = 0; i < dropdowns.length; i++) {
+              var openDropdown = dropdowns[i];
+              if (openDropdown.classList.contains('show')) {
+                openDropdown.classList.remove('show');
+              }
+            }
+          }
+        }
+        </script>
+        
 </body>
 </html>
